--- a/src/components/ScalePicker.css
+++ b/src/components/ScalePicker.css
@@ -1,5 +1,6 @@
 .container {
-  color: #eee;
+  padding: 20px;
+  color: #ccc;
 }
 
 .picker {
@@ -7,7 +8,7 @@
 }
 
 .radioButton {
-  color: #eee;
+  color: #fff;
 }
 
 .label {
