--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 550px;
+  width: 800px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -16,6 +16,10 @@
   justify-content: center;
   align-items: center;
   row-gap: 1rem;
+}
+
+.sidePanel {
+  width: 450px;
 }
 
 .wavyBackground {
@@ -38,4 +42,36 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+.bpmLine {
+  justify-content: space-between;
+}
+
+.bpm {
+  transform: translateX(10px);
+  width: 200px;
+  gap: 0.5rem !important;
+}
+
+.bpmLegend {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.bpmLegend div {
+  font-size: 0.75rem;
+  color: var(--neutral-text-color);
+}
+
+.bpmLeftMark {
+  position: relative;
+  left: -10px;
+}
+
+.bpmRightMark {
+  position: relative;
+  right: -10px;
 }
