--- a/src/ds/SliderLegend.module.css
+++ b/src/ds/SliderLegend.module.css
@@ -1,20 +1,21 @@
 .legend {
   width: 30px;
   display: flex;
+  margin: 5px 5px;
+  height: 100%;
 }
 
 .legend .track {
   position: relative;
   width: 2px;
-  color: var(--neutral-text-color);
+  color: var(--text-color);
   border-left: 2px solid var(--background-color-lighter);
   left: 25%;
-  box-sizing: border-box;
 }
 
 .legend .marks {
   font-size: 0.75rem;
-  color: var(--neutral-text-color);
+  color: var(--text-color);
   position: relative;
   display: flex;
   flex-direction: column;
@@ -28,16 +29,16 @@
 .legend .marks div:before {
   content: '';
   position: relative;
-  width: 2px;
+  width: 3px;
   height: 2px;
-  background-color: var(--neutral-text-color);
+  background-color: var(--text-color);
   display: block;
 }
 
 .topMark:before {
-  transform: translate(-10px, 5px);
+  transform: translate(-12px, 5px);
 }
 
 .bottomMark:before {
-  transform: translate(-10px, 10px);
+  transform: translate(-12px, 10px);
 }
