--- a/src/theme.css
+++ b/src/theme.css
@@ -5,8 +5,8 @@
   --background-color: #333;
   --background-color-darker: #111;
 
-  --darker-text-color: #aaa;
-  --neutral-text-color: #ccc;
+  --text-color-darker: #aaa;
+  --text-color: #ccc;
 
   --primary-color: #1392d3;
   --primary-color-darker: #115097;
@@ -30,6 +30,6 @@ body {
   margin: 0;
   height: 100%;
   font-family: var(--font-stack);
-  color: var(--neutral-text-color);
+  color: var(--text-color);
   overflow: hidden;
 }
