--- a/src/ds/Button.module.css
+++ b/src/ds/Button.module.css
@@ -1,6 +1,6 @@
 .button {
   border-radius: 5px;
-  border-width: 0px;
+  border-width: 0;
   box-sizing: border-box;
   cursor: pointer;
   padding: 0.5rem;
